@@ -2,6 +2,12 @@
 
 	* src/com/fluendo/player/CortadoPipeline.java:
 	(CortadoPipeline.build):
+	  wrap completely in try block and use extra var
+
+2006-10-26  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* src/com/fluendo/player/CortadoPipeline.java:
+	(CortadoPipeline.build):
 	  Microsoft VM does not allow accessing http.agent, so try/catch
 
 2006-10-26  Thomas Vander Stichele  <thomas at apestaart dot org>
